# geoify

./: .gitignore  Cargo.toml  README.md  _env  makefile
bots/slack/: Cargo.toml  _env
bots/slack/src/: config.rs  main.rs  websocket.rs
bots/slack/src/protocol/: chat.rs  events.rs  mod.rs
services/nlp/: Cargo.toml  _env
services/nlp/src/: config.rs  endpoint.rs  logging.rs  main.rs
slack-bot/src/: logging.rs  websocket.rs
src/: config.rs  logging.rs  main.rs
src/slack/: mod.rs  protocol.rs  websocket.rs
src/slack/protocol/: events.rs
