[package]
name = "geoify-nlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server ================================================
actix = "0.13.0"
actix-web = "4.1.0"

# Config ================================================
dotenv = "0.15.0"
config = "0.13.2"

# Logging ===========================================================
tracing = "0.1.32"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = [ "env_logger" ] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "registry", "time"]}
tracing-appender = "0.2.2"

# Generic Error Type ================================================
eyre = "0.6.7"
color-eyre = "0.6.1"
once_cell = "1.13.1"

# Serialization/deserialization =====================================
serde = { version ="1.0.136", features = ["derive"]  }
serde_json = "1.0.79"
rust-bert = { version = "0.19.0" }
